<resources>
    <string name="app_name">Geofishing</string>

    <!-- Navigation bar -->
    <string name="Catch">Catch</string>
    <string name="map">Map</string>
    <string name="new_catch">New Catch</string>
    <string name="feed">Feed</string>
    <string name="my_page">My page</string>
    <!-- End of Navigation bar -->

    <!-- User page -->
    <string name="UserPage_Title">Profile</string>
    <string name="UserPage_Name">Name</string>
    <string name="UserPage_About_Title">About</string>
    <string name="UserPage_About_Text">Bio</string>
    <string name="UserPage_RecyclerView_Title">My catches</string>
    <string name="UserPage_ImageView_Alternative_Text">Profile Image</string>
    <!-- End of User page -->

    <!-- Settings -->
    <string name="settings_text_title">Settings</string>
    <string name="settings_button_log_out">Log Out</string>
    <string name="settings_button_change_email">Change Email</string>
    <string name="settings_button_change_password">Change Password</string>
    <!-- End of Settings -->

    <!-- Rank-->
    <string name="Rank_Title">Rank</string>
    <string name="Rank_Number">1</string>
    <string name="Rank_Name">Name</string>
    <string name="Rank_Dots"> </string>
    <string name="Rank_Points">0</string>
    <!-- End of Rank-->

    <!-- Feed -->
    <string name="feedposterimageview">Picture</string>
    <string name="post_image">Picture</string>
    <string name="feedTitle">Title</string>
    <string name="feedProfile">Profile</string>
    <string name="description">description</string>
    <string name="feedLocation">Location</string>
    <!-- End of Feed -->

    <!-- New Catch -->
    <string name="New_Catch">Add a new Catch</string>
    <string name="New_Catch_Title">Title</string>
    <string name="New_Catch_Description">Description</string>
    <string name="New_Catch_Weight">Weight (g)</string>
    <string name="New_Catch_Length">Length (cm)</string>
    <string name="New_Catch_Take_Picture">Take a picture</string>
    <string name="New_Catch_Add_Picture">Select a picture</string>
    <string name="New_Catch__Rod">Fishing rod (optional)</string>
    <string name="New_Catch_Lure">Fishing lure (optional)</string>
    <string name="New_Catch_Add_New_Catch">Add new Catch</string>
    <string name="New_Catch_Species_Choose">Choose species</string>
    <string name="New_Catch_image">Add new image</string>
    <string-array name="fish_array">
        <item>Cod</item>
        <item>Salmon</item>
        <item>Blobfish</item>
        <item>Blowfish</item>
        <item>Brill</item>
        <item>Bass</item>
        <item>Dogfish</item>
        <item>Pirate perch</item>
    </string-array>
    <!-- End of New Catch-->

    <!-- Update User, Email & Password -->
    <string name="update_profile_text_title">Update Profile</string>
    <string name="update_password_text_title">Update Password</string>
    <string name="update_email_text_title">Update Email</string>
    <string name="update_profile_field_name">Update Name</string>
    <string name="update_profile_field_bio">Update Bio</string>
    <string name="update_profile_button_picture">Image</string>
    <string name="update_profile_button_save_changes">Save</string>
    <string name="update_profile_button_cancel_changes">Cancel</string>
    <string name="update_profile_field_password">New Password</string>
    <string name="update_profile_field_confirm_password">Confirm Password</string>
    <string name="update_profile_field_email">Update Email</string>
    <string name="update_profile_field_old_password">Old Password</string>
    <string name="update_profile_name_error">Name must be shorter than 51 characters</string>
    <string name="update_profile_bio_error">Bio must be shorter than 201 characters</string>
    <string name="update_profile_picture_not_selected">Could not select image</string>
    <string name="update_profile_success">Profile updated</string>
    <!-- End of Update User, Email & Password -->

    <!-- Auth -->
    <string name="auth_password_hint">Password</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_login_button_text">Log in</string>
    <string name="auth_signup_button_text">Sign up</string>
    <string name="auth_name_hint">Name</string>
    <string name="auth_confirm_password_hint">Confirm password</string>
    <string name="auth_signup_title_text">Create account</string>
    <string name="auth_log_out_button_text">Log out</string>
    <!-- End of Auth -->

    <!-- Map Fragment -->
    <string name="fab_label">Add catch</string>
    <string name="extended_fab_content_desc">Add Catch</string>
    <string name="permission_request_title">Location</string>
    <string name="permission_request_rationale">This app needs access to your precise location for some functionality to work as intended.</string>
    <string name="request_permission_again">Back</string>
    <string name="deny_permission_dialog">No thanks</string>
    <!-- End of Map Fragment -->

    <!-- Auth Service -->
    <string name="auth_service_wrong_credentials_error">Wrong username or password.</string>
    <string name="auth_service_login_error">Could not sign in user.</string>
    <string name="auth_service_logout_error">Could not sign out user.</string>
    <string name="auth_service_password_strength_error">Password is not strong enough.</string>
    <string name="auth_service_user_exists_error">Email already in use.</string>
    <string name="auth_service_signup_error">Could not sign up user.</string>
    <string name="auth_service_change_password_error">Could not change password.</string>
    <string name="auth_service_change_email_error">Could not change email.</string>
    <!-- End of Auth Service -->

    <!-- File Service -->
    <string name="file_service_upload_error">Could not upload file.</string>
    <string name="file_service_delete_error">Could not delete file.</string>
    <!-- End of File Service -->

    <!-- Catch Repository -->
    <string name="catch_repo_create_error">Could not create catch.</string>
    <string name="catch_repo_read_error">Could not get catches.</string>
    <string name="catch_repo_update_error">Could not update catch.</string>
    <string name="catch_repo_delete_error">Could not delete catch.</string>
    <string name="catch_repo_find_error">Could not find catch.</string>
    <string name="catch_repo_search_error">Could not find any matching catches.</string>
    <!-- End of Catch Repository -->

    <!-- Profile Repository -->
    <string name="profile_repo_create_error">Could not create profile.</string>
    <string name="profile_repo_read_error">Could not get profiles.</string>
    <string name="profile_repo_update_error">Could not update profile.</string>
    <string name="profile_repo_delete_error">Could not delete profile.</string>
    <string name="profile_repo_find_error">Could not find profile.</string>
    <string name="profile_repo_search_error">Could not find any matching profiles.</string>
    <!-- End of Profile Repository -->

    <!-- Todoo Repository -->
    <string name="todo_repo_create_error">Could not create todo.</string>
    <string name="todo_repo_read_error">Could not get todos.</string>
    <string name="todo_repo_update_error">Could not update todo.</string>
    <string name="todo_repo_delete_error">Could not delete todo.</string>
    <string name="todo_repo_find_error">Could not find todo.</string>
    <string name="todo_repo_search_error">Could not find any matching todos.</string>
    <!-- End of Todoo Repository -->

    <!-- Todoo Notification Receiver -->
    <string name="todo_notification_receiver_message_placeholder">Remember, you have a things todo.</string>
    <!-- End of Todoo Notification Receiver -->

    <!-- New Todoo -->
    <string name="new_todo_choose_day">Choose day for reminder</string>
    <string name="new_todo_choose_time">Choose time for reminder</string>
    <string name="new_todo_created">Todo added.</string>
    <string name="new_todo_field_description_hint">Description</string>
    <string name="new_todo_switch_text">Reminder</string>
    <string name="new_todo_button_text">Create todo</string>
    <!-- End of New Todoo -->

    <!-- Other -->
    <string name="edit_catch">Edit catch button</string>
    <string name="update_catch">Update catch</string>
    <string name="log_out">Log Out</string>
    <string name="hello_blank_fragment">asdasd</string>
    <string name="label_catch_detail">Catch detail</string>
    <string name="alertDialog_delete_catch">Delete catch</string>
    <string name="alertDialog_confirm_delete">Are you sure you want to delete this catch?</string>
    <string name="alertDialog_catch_deleted_toast">Catch deleted</string>
    <string name="alertDialog_cancel">Cancel</string>
    <string name="alertDialog_positive_button">Yes</string>
    <string name="label_update_catch">Update catch</string>
    <string name="label_todo">Todo</string>
    <string name="label_new_todo">New todo</string>
    <!-- End of Other -->

</resources>