<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userPage_graph"
    app:startDestination="@id/userPageFragment">
    <fragment
        android:id="@+id/userPageFragment"
        android:name="no.hiof.geofishing.ui.views.UserPageFragment"
        android:label="@string/my_page"
        tools:layout="@layout/fragment_user_page">
        <action
            android:id="@+id/action_userPageFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popExitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_left"/>
        <action
            android:id="@+id/action_userPageFragment_to_updateUserFragment"
            app:destination="@id/updateUserFragment" />
        <action
            android:id="@+id/action_userPageFragment_to_todoFragment"
            app:destination="@id/todoFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popExitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_left"/>
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="no.hiof.geofishing.ui.views.SettingsFragment"
        android:label="@string/settings_text_title"
        tools:layout="@layout/fragment_settings" />
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/login_page_graph"
        app:enterAnim="@anim/from_left"
        app:exitAnim="@anim/to_right" />
    <fragment
        android:id="@+id/updateUserFragment"
        android:name="no.hiof.geofishing.ui.views.UpdateUserFragment"
        android:label="fragment_update_user"
        tools:layout="@layout/fragment_update_user" />
    <fragment
        android:id="@+id/todoFragment"
        android:name="no.hiof.geofishing.ui.views.TodoFragment"
        android:label="@string/label_todo"
        tools:layout="@layout/fragment_todo" >
        <action
            android:id="@+id/action_todoFragment_to_newTodoFragment"
            app:destination="@id/newTodoFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popExitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_left"/>
    </fragment>
    <fragment
        android:id="@+id/newTodoFragment"
        android:name="no.hiof.geofishing.ui.views.NewTodoFragment"
        android:label="@string/label_new_todo"
        tools:layout="@layout/fragment_new_todo" >
        <action
            android:id="@+id/action_newTodoFragment_to_todoFragment"
            app:destination="@id/todoFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popExitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_left"/>
    </fragment>
</navigation>