<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feed_page_graph"
    app:startDestination="@id/feedFragment">
    <fragment
        android:id="@+id/feedFragment"
        android:name="no.hiof.geofishing.ui.views.FeedFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feed" >
        <action
            android:id="@+id/action_feedFragment_to_feedPostDetailFragment"
            app:destination="@id/feedPostDetailFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popExitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_left"/>
    </fragment>
    <fragment
        android:id="@+id/feedPostDetailFragment"
        android:name="no.hiof.geofishing.ui.views.FeedPostDetailFragment"
        android:label="@string/label_catch_detail"
        tools:layout="@layout/fragment_feed_post_detail">

        <deepLink
            android:id="@+id/deepLink"
            app:uri="myapp://Geofishing.com/{catch_id}" />

        <argument
            android:name="catch_id"
            android:defaultValue="null"
            app:argType="string" />
        <action
            android:id="@+id/action_feedPostDetailFragment_to_updateCatchFragment"
            app:destination="@id/updateCatchFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateCatchFragment"
        android:name="no.hiof.geofishing.ui.views.UpdateCatchFragment"
        android:label="@string/label_update_catch"
        tools:layout="@layout/fragment_update_catch" >

        <argument
            android:name="catch_id"
            android:defaultValue="null"
            app:argType="string" />
    </fragment>
    <action
        android:id="@+id/action_global_feedPostDetailFragment"
        app:destination="@id/feedPostDetailFragment"
        app:launchSingleTop="false" />

</navigation>